fix: fix test selection on Firefox

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -206,7 +206,7 @@ html {
 }
 
 .selectable {
-  user-select: auto;
+  user-select: text;
 }
 
 .spinner {
@@ -221,7 +221,7 @@ html {
   right: 0;
   bottom: 0;
   left: 0;
-  user-select: auto;
+  user-select: text;
 
   .fa-spin {
     font-size: 4rem;
@@ -1014,7 +1014,7 @@ input[type='text'] {
     right: 0;
     bottom: 0;
     left: 0;
-    user-select: auto;
+    user-select: text;
   }
 }
 
@@ -1035,7 +1035,7 @@ input[type='text'] {
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: stretch;
-    user-select: auto;
+    user-select: text;
 
     .logs-control-bar {
       flex: 0 0 auto;
